@@ -31,6 +31,8 @@
 // looking too blurry.  (Also applies to text rendering.)
 #define GENERATE_MIPMAPS 0
 
+extern int	min_lod_bais;
+extern int	max_lod_bais;
 
 // bitmap_info_ogl declaration
 struct bitmap_info_ogl : public gameswf::bitmap_info
@@ -63,7 +65,6 @@ struct render_handler_ogl : public gameswf::render_handler
 
 	gameswf::matrix	m_current_matrix;
 	gameswf::cxform	m_current_cxform;
-	
 	void set_antialiased(bool enable)
 	{
 		m_enable_antialias = enable;
@@ -142,6 +143,15 @@ struct render_handler_ogl : public gameswf::render_handler
 		{
 			assert(m_mode != INVALID);
 
+			// FIXME: LOD BAIS hack
+#if 0
+			float lod;
+			glGetTexParameterfv(GL_TEXTURE_2D, GL_TEXTURE_MAX_LOD, &lod);
+			printf("Max LOD is %f\n", lod);
+#endif
+			glTexParameterf(GL_TEXTURE_2D, GL_TEXTURE_MIN_LOD, min_lod_bais);
+			glTexParameterf(GL_TEXTURE_2D, GL_TEXTURE_MAX_LOD, max_lod_bais);
+			
 			if (m_mode == COLOR)
 			{
 				apply_color(m_color);
@@ -161,7 +171,6 @@ struct render_handler_ogl : public gameswf::render_handler
 				else
 				{
 					// Set up the texture for rendering.
-
 					{
 						// Do the modulate part of the color
 						// transform in the first pass.  The
@@ -180,7 +189,7 @@ struct render_handler_ogl : public gameswf::render_handler
 					glEnable(GL_TEXTURE_GEN_T);
 				
 					if (m_mode == BITMAP_CLAMP)
-					{
+					{	
 						glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_S, GL_CLAMP_TO_EDGE);
 						glTexParameteri(GL_TEXTURE_2D, GL_TEXTURE_WRAP_T, GL_CLAMP_TO_EDGE);
 					}
